# UniKP

./: .gitignore  UniKP_test.ipynb  pyproject.toml  requirements.txt
src/unikp/: __init__.py  build_corpus.py  dataset.py  prediction.py  pretrain_rnn.py  pretrain_trfm.py
