[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "unikp"
version = "0.0.0"
description = "Kcat, KM and Kcat/KM prediccion for enzyme sequences"
license = "MIT"
authors = [
    "Han Yu <yuhanid147@gmail.com>",
    "Semidán Robaina Estévez <semidan.robaina@gmail.com>",
]
maintainers = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = ["metabolism", "enzymes", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
]
packages = [{ include = "unikp", from = "src" }]
[tool.poetry.dependencies]
python = "^3.7"
